--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
+  "version": 2,
   "builds": [
     { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
